hphp/test/zend/good/Zend/tests/traits/error_005.php
<?php

final class abc { 
}

class A {
	use abc;
}

?>