hphp/test/zend/bad/Zend/tests/bug48667_2.php
<?php

abstract class A implements IteratorAggregate, Iterator { }

?>